# cuda-devops

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  Jenkinsfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt
src/operations/include/operations/: operations.h
src/operations/src/: operations.cu
src/operations/test/: operations_test.cc
